# hci-team-02-web-server

./: .env.temp  .gitignore  README.md  alembic.ini  article_data.json  press_logo_set.json  pyproject.toml
alembic/: env.py
app/: main.py  test.py
app/api/: deps.py  main.py
app/api/routes/: article.py
app/core/: db.py
app/models/: __init__.py  article.py  author.py  highlight.py  keyword.py  newschat.py  press.py  response.py  storysummary.py
app/util/: AI.py  scraper.py  tempCodeRunnerFile.py
